--- a/c/puzzle.css
+++ b/c/puzzle.css
@@ -66,8 +66,7 @@ canvas.playing, .cta, .cta * {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	-o-user-select: none;
-	user-select: none;
-}
+	user-select: none;}
 
 /************************/
 /*			CTA Styling			*/
