--- a/c/puzzle.css
+++ b/c/puzzle.css
@@ -72,8 +72,36 @@ canvas.playing, .cta, .cta * {
 /*			CTA Styling			*/
 /************************/
 
-.cta-puz {position: relative; background: #131313; width: 120px; height: 44px;}
-	.cta-puz p {font-size: 1.8em; font-family: "Futura1"; padding: .45em 0 0 1em; color: #dedede;}
+.cta-puz {border-radius: 22px 0 0 22px; position: relative; background: #131313; width: 120px; height: 44px; border: 2px solid #dedede; border-right: 0;}
+	.cta-puz p {font-size: 1.8em; font-family: "Futura1"; padding: .45em 0 0 1.1em; color: #dedede;}
 	.cta-puz:hover p {color: #bcbcbc;}
-	.cta-puz:after {left: 100%; border: solid transparent; content: " "; height: 0; width: 0; position: absolute; pointer-events: none;}
-	.cta-puz:after {border-left-color: #131313; border-width: 22px; top: 50%; margin-top: -22px;}
+	
+.cta-puz:after, .cta-puz:before {
+	left: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;}
+
+.cta-puz:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-left-color: #131313;
+	border-width: 21px;
+	top: 50%;
+	margin-top: -21px;}
+	
+.cta-puz:before {
+	border-color: rgba(222, 222, 222, 0);
+	border-left-color: #dedede;
+	border-width: 24px;
+	top: 50%;
+	margin-top: -24px;}
+
+/* hover state */
+.cta:hover .cta-puz {background: #232323;}
+.cta:hover .cta-puz:after {border-left-color: #232323;}
+
+
+
