--- a/c/puzzle.css
+++ b/c/puzzle.css
@@ -11,49 +11,60 @@
 /*			Layout			*/
 /********************/
 
-body {background: #000000; min-height: 1000px; font-family: "Georgia";}
+body {background: #000000 url("../i/o/bg.jpg") no-repeat 50% 0; min-height: 850px; font-family: "Georgia";}
 
 /********************/
 /*			Header			*/
 /********************/
 
 header {background: #131313; height: 80px; color: #efefef; font-family: "Futura1"; box-shadow: inset 0 -20px 10px -10px black;}
-	header nav {width: 960px; margin: 0 auto; padding-top: 1.6em;}
+	header nav {width: 900px; margin: 0 auto; padding: 1.6em 30px 0;}
 		header nav #logo {background: url("../i/o/logo.png") no-repeat; width: 200px; height: 23px; float: left;}
 		header nav ol {float: right; font-size: 1.5em; /*text-transform: uppercase;*/}
 			header nav ol li {display: inline-block; padding-left: 2em; text-shadow: 1px 1px 0 #000000;}
 			header nav ol li:first-child {padding-left: 0;}
+			/* Default styling for nav links */
 			header nav ol li a:link {color: #dedede; text-decoration: none;}
 			header nav ol li a:hover {color: #bcbcbc;}
 			header nav ol li a:visited {color: #dedede;}
 			header nav ol li a:active {color: #bcbcbc;}
+			/* Section specific coloring */
+			header nav ol li:nth-child(1) a:hover,
+			header nav ol li:nth-child(1) a.current {color: #fefc56;}
+			header nav ol li:nth-child(2) a:hover,
+			header nav ol li:nth-child(2) a.current {color: #a9935c;}
+			header nav ol li:nth-child(3) a:hover,
+			header nav ol li:nth-child(3) a.current {color: #77b272;}
+			header nav ol li:nth-child(4) a:hover,
+			header nav ol li:nth-child(4) a.current {color: #80a1a5;}
 
 /********************/
 /*			Content			*/
 /********************/
 
-#container {background: url("../i/o/bgblue.jpg") no-repeat; height: 750px; width: 1200px; margin: 0 auto;}
+#container {height: 750px; width: 960px; margin: 0 auto;}
 
-	main#contents {width: 960px; height: auto; margin: 0 auto; padding: 35px 0 0 0;
+	main#contents {width: 900px; height: auto; margin: 0 auto; padding: 30px 30px 0;
 		-webkit-perspective:500;
 		-moz-perspective:500;
 		-ms-perspective:500;
 		-o-perspective:500;
 		perspective:500;}
 
-		section#directions {float: left; width: 160px; height: auto;}
+		section#directions {float: left; width: 190px; height: auto;}
 			section#directions div {font-size: .9em; margin: 25px 0 25px;}
 				section#directions div:first-child {margin-top: 0;}
 				section#directions div h6 {font-weight: bold; text-decoration: underline; font-size: 1.2em; margin-bottom: .5em; text-shadow: 1px 1px 0 #dedede;}
-				section#directions #limit {margin-top: 15px;}
-				section#directions #limit time {font-size: 3em; text-shadow: 1px 1px 0 #dedede;}
-				section#directions #limit img {vertical-align: bottom; margin-right: 15px; width: 35px; height: 35px;}
+				section#directions #timer {margin-top: 15px; text-shadow: 1px 1px 0 #dedede;}
+				section#directions #timer time {font-size: 3em;}
+				section#directions #timer img {vertical-align: bottom; margin-right: 15px; width: 35px; height: 35px;}
 
-		#puzzlebox {background: url("../i/o/f.jpg") no-repeat; float: right; padding: 25px; margin: 0 auto; width: 720px; height: 450px;
+		#puzzlebox {background: url("../i/o/f.jpg") no-repeat; float: right; padding: 21px 20px 20px; margin: 0 auto; width: 640px; height: 400px;
 			-webkit-transform: rotateX(1deg);
 			-moz-transform: rotateX(1deg);
 			-o-transform: rotateX(1deg);
 			transform: rotateX(1deg);}
+
 
 /********************************/
 /*			Misc Visual Classes			*/
@@ -67,6 +78,8 @@ canvas.playing, .cta, .cta * {
 	-ms-user-select: none;
 	-o-user-select: none;
 	user-select: none;}
+	
+.hurry {color: red;}
 
 /************************/
 /*			CTA Styling			*/
