--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,15 @@
 /******************/
 
 @import url("http://meyerweb.com/eric/tools/css/reset/reset.css");
-@font-face {font-family: Futura1; src: url("../e/fonts/FuturaStd-CondensedLight.otf");}
-@font-face {font-family: Futura2; src: url("../e/fonts/FuturaStd-Condensed.otf");}		
-@font-face {font-family: Futura3; src: url("../e/fonts/FuturaStd-CondensedBold.otf");}
+@font-face {font-family: Futura1; src: url("../includes/fonts/FuturaStd-CondensedLight.otf");}
+@font-face {font-family: Futura2; src: url("../includes/fonts/FuturaStd-Condensed.otf");}		
+@font-face {font-family: Futura3; src: url("../includes/fonts/FuturaStd-CondensedBold.otf");}
 
 /********************/
 /*			Layout			*/
 /********************/
 
-body {background: #000000 url("../i/o/bg.jpg") no-repeat 50% 0; min-height: 850px; font-family: "Georgia";}
+body {background: #000000 url("../images/bg.jpg") no-repeat 50% 0; min-height: 850px; font-family: "Georgia";}
 
 /********************/
 /*			Header			*/
@@ -19,7 +19,7 @@ body {background: #000000 url("../i/o/bg.jpg") no-repeat 50% 0; min-height: 850p
 
 header {background: #131313; height: 80px; color: #efefef; font-family: "Futura1"; box-shadow: inset 0 -20px 10px -10px black;}
 	header nav {width: 900px; margin: 0 auto; padding: 1.6em 30px 0;}
-		header nav #logo {background: url("../i/o/logo.png") no-repeat; width: 200px; height: 23px; float: left;}
+		header nav #logo {background: url("../images/logo.png") no-repeat; width: 200px; height: 23px; float: left;}
 		header nav ol {float: right; font-size: 1.5em; /*text-transform: uppercase;*/}
 			header nav ol li {display: inline-block; padding-left: 2em; text-shadow: 1px 1px 0 #000000;}
 			header nav ol li:first-child {padding-left: 0;}
@@ -51,21 +51,26 @@ header {background: #131313; height: 80px; color: #efefef; font-family: "Futura1
 		-o-perspective:500;
 		perspective:500;}
 
-		section#directions {float: left; width: 190px; height: auto;}
-			section#directions div {font-size: .9em; margin: 25px 0 25px;}
+		section#directions {float: left; width: 190px; height: auto; clear: right;}
+			section#directions div {font-size: .9em; margin: 25px 0 25px; display: inline-block; }
 				section#directions div:first-child {margin-top: 0;}
 				section#directions div h6 {font-weight: bold; text-decoration: underline; font-size: 1.2em; margin-bottom: .5em; text-shadow: 1px 1px 0 #dedede;}
 				section#directions #timer {margin-top: 15px; text-shadow: 1px 1px 0 #dedede;}
 				section#directions #timer time {font-size: 3em;}
 				section#directions #timer img {vertical-align: bottom; margin-right: 15px; width: 35px; height: 35px;}
 
-		#puzzlebox {background: url("../i/o/f.jpg") no-repeat; float: right; padding: 21px 20px 20px; margin: 0 auto; width: 640px; height: 400px;
+		#puzzlebox {background: url("../images/f.jpg") no-repeat; float: right; padding: 21px 20px 20px; margin: 0 auto; width: 640px; height: 400px;
+			
+			padding: 20px;
+			
 			-webkit-transform: rotateX(1deg);
 			-moz-transform: rotateX(1deg);
 			-o-transform: rotateX(1deg);
 			transform: rotateX(1deg);}
 
-
+		/* positioning our javascript puzzle objects inside element */
+		#puzzle {position: relative;}
+		
 /********************************/
 /*			Misc Visual Classes			*/
 /********************************/
@@ -85,27 +90,19 @@ canvas.playing, .cta, .cta * {
 /*			CTA Styling			*/
 /************************/
 
-.cta-puz {/*border-radius: 22px 0 0 22px;*/ position: relative; background: #131313; width: 120px; height: 44px; border: 2px solid #dedede; border-right: 0;}
+.cta-puz {/*border-radius: 22px 0 0 22px;*/ position: relative; background: #c2243e; width: 120px; height: 44px; border: 2px solid #dedede; border-right: 0;}
 	.cta-puz p {font-size: 1.8em; font-family: "Futura1"; padding: .45em 0 0 1.1em; color: #dedede;}
 	
-.cta-puz:after, .cta-puz:before {
-	left: 100%;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;}
+.cta-puz:after, .cta-puz:before {left: 100%; border: solid transparent; content: " "; height: 0; width: 0; position: absolute; pointer-events: none;}
 
-.cta-puz:after {
-	border-color: rgba(136, 183, 213, 0);
-	border-left-color: #131313;
+.cta-puz:after {border-color: rgba(23, 23, 23, 0);
+	border-left-color: #c2243e;
 	border-width: 21px;
 	top: 50%;
 	margin-top: -21px;}
 	
 .cta-puz:before {
-	border-color: rgba(222, 222, 222, 0);
+	border-color: rgba(23, 23, 23, 0);
 	border-left-color: #dedede;
 	border-width: 24px;
 	top: 50%;
