--- a/lab/css/styles.css
+++ b/lab/css/styles.css
@@ -2,7 +2,6 @@
 /*			Setup			*/
 /*************/
 
-/* reset */
 html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;} article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;} body {line-height: 1;} ol, ul {list-style: none;} blockquote, q {quotes: none;} blockquote:before, blockquote:after, q:before, q:after {content: ''; content: none;} table {border-collapse: collapse; border-spacing: 0;} .cf:before, .cf:after {content: " "; display: table;} .cf:after {clear: both;}
 
 /***************/
@@ -24,8 +23,7 @@ main#content {
 		  margin: 125px auto;
 		  border: solid 20px;
 		  border-image: url("../images/can-frame.jpg") 20 repeat;
-		  z-index: 0;
-    overflow: visisble;
+		  box-shadow: 0 2px 5px 0 #000000;
 	   }
 				#glass {
 						background: transparent;
